--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form class="form" method="post" action="/venues/{{venue.id}}/edit">
+      {{form.csrf_token}}
       <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -30,11 +31,31 @@
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+        <label for="website">Webiste</label>
+        <small>Website Link</small>
+          {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="image_link">Profile Picture</label>
+          <small>Upload a photo</small>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://',autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking_talent">Seeking Talent</label>
+          <small>Are you Looking for new talent?</small>
+          {{ form.seeking_talent(class_ = 'form-control', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="seeking_description">Seeking Description</label>
+          <small>What are  you looking for?</small>
+          {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
         </div>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
