--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -47,6 +47,21 @@
 	</div>
 </div>
 <section>
+	<h3>
+		<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit Venue</button></a>
+		<a id="delete_venue" href=""><button class="btn btn-primary btn-lg">Delete Venue</button></a>
+	</h3>
+	<script>
+		document.getElementById("delete_venue").addEventListener("click", deleteVenue);
+		function deleteVenue() {
+			fetch("/venues/{{ venue.id }}", {
+				method: 'DELETE',
+			}).then(response => {window.location.href = "/" ;})
+		}
+
+	</script>
+</section>
+<section>
 	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in venue.upcoming_shows %}
